--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body{
 }
 
 header{
-    background-color:#4CAF50;
+    background-color:#4c68af;
     color:white;
     padding:20px;
     text-align:center;
@@ -42,12 +42,12 @@ main img {
 }
 
 footer {
-    background-color:#333;
+    background-color:#eb0000;
     color:white;
     text-align:center;
     position:fixed;
     bottom:0;
-    width:100%;
+    width: 110px;
 }
 
 p {
